fixed tab overlapping zindex issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -277,6 +277,10 @@ textarea {
     z-index: 3000; /* FIXME: check z-indexes  */
 }
 
+.placeDetailTabs .tabs {
+/*    z-index: 3000;*/
+}
+
 #siteHeader .fontIcons {
 	font-size: 110%;
 	padding: 7px 0 5px 10px;
@@ -594,6 +598,8 @@ input[type="submit"], .button {
 	right: 0;
     font-size: 90%;
     text-transform: uppercase;
+/*    z-index: 3100;*/
+
 }
 
 #searchBlock {
@@ -1006,8 +1012,8 @@ border-color: transparent #061c3e #061c3e transparent;
 }
 
 .placeDetailTabs .tabs {
-    position: relative;
-/*    z-index: -1;*/
+/*    position: relative;
+    z-index: -1;*/
 }
 
 
@@ -1064,10 +1070,10 @@ border-color: transparent #061c3e #061c3e transparent;
 }
 
 .pagViews {
-	position: fixed;
+	/*position: fixed;
 	top: 120px;
 	right: 10px;
-	/* display: none; */
+	 display: none; */
 	/* z-index: -1; */
 	/* top: 80px; */
 }
@@ -1380,7 +1386,7 @@ ul.tabs li {
     /* border-right: 1px solid rgba(255,255,255,0.5); */ /*add fallback later and remove for second and fourth guy*/
 	margin-bottom: -1px; /*--Pull the list item down 1px--*/
 	overflow: hidden;
-	position: relative;
+/*	position: relative;*/
 }
 
 ul.tabs li:first-of-type {
